# swtest

./: .clang-tidy  .commands_example.txt.swp  CMakeLists.txt  KNOWN_ISSUES.md  README.md  check_code.bat  generate_vs_project.bat  update_vs_project.bat
src/: main.cpp
src/Core/: Action.h  Point2D.h  Property.h  Random.cpp  Random.h  Unit.cpp  Unit.h
src/Features/Actions/: Actions.h  MeleeAttackAction.cpp  MeleeAttackAction.h  MoveAction.cpp  MoveAction.h  RangedAttackAction.cpp  RangedAttackAction.h
src/Features/Game/: Game.cpp  Game.h
src/Features/Map/: Map.cpp  Map.hpp
src/Features/Properties/: Properties.h
src/Features/Units/: Hunter.cpp  Hunter.h  SwordsMan.cpp  SwordsMan.h
src/IO/: README.md
src/IO/System/: EventLog.hpp
